Fix subnavbar wrapping

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -102,6 +102,10 @@ ul.navbar-user {
 }
 
 // Subnav nav tabs
+.navbar-subnav {
+  padding: 0 15px;
+}
+
 .navbar-subnav .navbar-link span {
   font-size: 24px;
   color: #426D97;
